derive-ex-tests/tests/compile_fail/compare_op/hash_key_not_impl_hash.rs
use derive_ex::derive_ex;

#[derive(Eq, PartialEq)]
struct NoHash;

#[derive_ex(Hash)]
struct X {
    #[hash(key = NoHash)]
    x: u8,
}

fn main() {}
